remove todo's, remove deprecated java<11 api code, clean up obsolete classes, use sets instead of hashsets in some api's