@@ -17,6 +17,7 @@ public class AgentFactory {
 		return getInstance("com.dexels.navajo.server.monitoring.ZapcatZabbixAgent");
 	}
 	
+	@SuppressWarnings("unchecked")
 	public static final AgentInterface getInstance(String className) {
 		
 		if ( instance != null ) {
@@ -28,7 +29,7 @@ public class AgentFactory {
 				if ( instance == null ) {
 					try {
 						Class<? extends AgentInterface> c = (Class<? extends AgentInterface>) Class.forName(className);
-						AgentInterface dummy = c.newInstance();
+						AgentInterface dummy = c.getDeclaredConstructor().newInstance();
 						Method m = c.getMethod("getInstance", (Class []) null);
 						instance = (AgentInterface) m.invoke(dummy, (Object []) null);
 					} catch (Throwable e) {
